--- a/src/app/pages/menu/menu.component.html
+++ b/src/app/pages/menu/menu.component.html
@@ -1,31 +1,35 @@
-<div class="container-fluid">
-  <div class="row game-board">
-    <div class="col-sm-12 game-container">
-      <div class="container">
-        <div class="row">
-          <div class="col-sm-12 col-md-6 offset-md-3">
-            <div class="text-center">
-              <img src="assets/images/logo.png" alt="">
-            </div>
-            <button routerLink="/quick-mind" class="btn btn-outline-warning btn-block" style="font-size: 1.8em"
-                    *ngIf="quickMindTotal > 0">
-              <fa-icon [icon]="['far', 'clock']" [fixedWidth]="true"></fa-icon> Mente más rápida
-            </button>
+<div class="container">
+  <div class="row vh-100 align-items-center">
+    <div class="col-12 text-center">
+      <!-- <img src="assets/images/logo.png" alt=""> -->
+      <h1 class="display-3 text-uppercase text-primary">Biblionaire</h1>
+      <p class="lead mb-5">El juego que pone a prueba todos tus conocimientos bíblicos</p>
 
-            <button routerLink="/game" class="btn btn-outline-warning btn-block" style="font-size: 1.8em"
-                    *ngIf="basicTotal > 0">
-              <fa-icon [icon]="['fas', 'play']" [fixedWidth]="true"></fa-icon> Jugar Biblionario
-            </button>
+      <div class="col-sm-12 col-md-6 offset-md-3">
+        <button routerLink="/jugar" class="btn btn-secondary btn-lg btn-block" *ngIf="basicTotal > 0">
+          <fa-icon [icon]="faPlay" [fixedWidth]="true"></fa-icon> Empezar a jugar
+        </button>
 
-            <button (click)="fullScreen()" class="btn btn-outline-light btn-block">
-              <fa-icon [icon]="['fas', !isFullScreen ? 'expand' : 'compress']" [fixedWidth]="true"></fa-icon> Pantalla
-              completa
-            </button>
+        <button routerLink="/mente-rapida" class="btn btn-lg btn-outline-secondary btn-block" *ngIf="quickMindTotal > 0">
+          <fa-icon [icon]="faClock" [fixedWidth]="true"></fa-icon> Mente más rápida
+        </button>
 
-            <p class="text-center text-light small" style="margin-top:10px">{{summary}}</p>
-          </div>
-        </div>
+        <p class="text-center mt-3">
+          <small>
+            Hecho por Christiam Mena (v1.0.0) <br />
+            <a href="https://github.com/xtiam57/biblionaire" target="_blank">@xtiam57</a>
+          </small>
+        </p>
+
+        <!-- <p class="text-center mt-3">
+                                                                                                          <small>
+                                                                                                            <strong>Preguntas:</strong> <br />
+                                                                                                            {{summary}}
+                                                                                                          </small>
+                                                                                                        </p> -->
       </div>
     </div>
+
+
   </div>
 </div>
