--- a/src/app/pages/quick-mind/quick-mind.component.html
+++ b/src/app/pages/quick-mind/quick-mind.component.html
@@ -1,55 +1,56 @@
-<div class="container-fluid">
-  <div class="row game-board">
-    <div class="col-sm-12 game-container">
-      <div class="container">
-        <div *ngIf="!quickMindService.isAnswerRevealed && quickMindService.getCurrentQuestion().options.length"
-             class="game-messages">
-          <h1 class="display-4"
-              *ngIf="quickMindService.timeLeft >= 0 && quickMindService.timeLeft <= 20 && !quickMindService.isAnswerRevealed">
-            00:{{ quickMindService.timeLeft | number:'2.0' }}
-          </h1>
+<div class="container">
+  <div class="row vh-100 align-items-center">
+    <div class="col-sm-12">
+
+      <div class="game-question">
+        <p *ngIf="!quickMindService.isAnswerRevealed">{{ quickMindService.getCurrentQuestion().question }}</p>
+
+        <div *ngIf="quickMindService.timeLeft >= 0 && quickMindService.timeLeft <= 20 && !quickMindService.isAnswerRevealed"
+             class="mb-3">
+          <ngb-progressbar type="secondary" [value]="quickMindService.timeLeft" [max]="quickMindService.boundTime"
+                           height="0.5rem">
+          </ngb-progressbar>
         </div>
 
-        <div class="game-question">
-          <p *ngIf="!quickMindService.isAnswerRevealed">{{ quickMindService.getCurrentQuestion().question }}</p>
-
-          <div *ngIf="!quickMindService.isAnswerRevealed" class="row game-options">
-            <div *ngFor="let option of quickMindService.getCurrentQuestion().options; index as i" class="col-6">
-              <div class="game-option disabled" [ngClass]="{ 'hidden': !quickMindService.hasStarted }">
-                <span>{{ quickMindService.getOptionLetter(i) }}:</span>
-                {{ option }}
-              </div>
+        <div *ngIf="!quickMindService.isAnswerRevealed" class="row game-options">
+          <div *ngFor="let option of quickMindService.getCurrentQuestion().options; index as i" class="col-6">
+            <div class="game-option disabled" [ngClass]="{ 'hidden': !quickMindService.hasStarted }">
+              <span>{{ quickMindService.getOptionLetter(i) }}:</span>
+              {{ option }}
             </div>
-          </div>
-
-          <div *ngIf="quickMindService.isAnswerRevealed" class="row game-options">
-            <div *ngFor="let option of quickMindService.getCurrentQuestion().order" class="col-6 offset-3">
-              <div class="game-option disabled big">
-                <span>{{ option.letter }}:</span>
-                {{ option.text }}
-              </div>
-            </div>
-          </div>
-
-          <div class="game-buttons">
-            <button *ngIf="!quickMindService.hasStarted && quickMindService.getCurrentQuestion().options.length"
-                    (click)="quickMindService.play()" class="btn btn-outline-light btn-lg">
-              <fa-icon [icon]="['fas', 'play']" [fixedWidth]="true"></fa-icon> Comenzar
-            </button>
-
-            <button *ngIf="!quickMindService.isTimerRunning && !quickMindService.isAnswerRevealed && quickMindService.hasStarted"
-                    (click)="quickMindService.revealAnswer()" class="btn btn-outline-warning btn-lg">
-              <fa-icon [icon]="['far', 'eye']" [fixedWidth]="true"></fa-icon> Revelar Respuesta
-            </button>
-
-            <button routerLink="/"
-                    *ngIf="quickMindService.isAnswerRevealed || !quickMindService.getCurrentQuestion().options.length"
-                    class="btn btn-outline-warning btn-lg">
-              <fa-icon [icon]="['fas', 'bars']" [fixedWidth]="true"></fa-icon> Ir al Menú
-            </button>
           </div>
         </div>
+
+        <div *ngIf="quickMindService.isAnswerRevealed" class="row game-options">
+          <div *ngFor="let option of quickMindService.getCurrentQuestion().ordered" class="col-sm-12 col-md-6 offset-md-3">
+            <div class="game-option disabled big">
+              <span>{{ option.letter }}:</span>
+              {{ option.text }}
+            </div>
+          </div>
+        </div>
+
+        <div class="text-center">
+          <button *ngIf="!quickMindService.hasStarted && quickMindService.getCurrentQuestion().options.length"
+                  (click)="quickMindService.play()" class="btn btn-link">
+            <fa-icon [icon]="faPlay" [fixedWidth]="true"></fa-icon> Comenzar
+          </button>
+
+          <button *ngIf="!quickMindService.isTimerRunning && !quickMindService.isAnswerRevealed && quickMindService.hasStarted"
+                  (click)="quickMindService.revealAnswer()" class="btn btn-link">
+            <fa-icon [icon]="faEye" [fixedWidth]="true"></fa-icon> Revelar Respuesta
+          </button>
+
+          <button routerLink="/"
+                  *ngIf="quickMindService.isAnswerRevealed || !quickMindService.getCurrentQuestion().options.length"
+                  class="btn btn-link">
+            <fa-icon [icon]="faBars" [fixedWidth]="true"></fa-icon> Ir al Menú
+          </button>
+        </div>
+
+
       </div>
+
     </div>
   </div>
 </div>
