--- a/src/app/pages/quick-mind/quick-mind.component.html
+++ b/src/app/pages/quick-mind/quick-mind.component.html
@@ -1,6 +1,6 @@
 <div class="container">
   <div class="row vh-100 align-items-center">
-    <div class="col-sm-12">
+    <div class="col-12 col-lg-8 offset-lg-2">
 
       <div class="game-question">
         <p *ngIf="!quickMindService.isAnswerRevealed">{{ quickMindService.getCurrentQuestion().question }}</p>
@@ -13,7 +13,7 @@
         </div>
 
         <div *ngIf="!quickMindService.isAnswerRevealed" class="row game-options">
-          <div *ngFor="let option of quickMindService.getCurrentQuestion().options; index as i" class="col-6">
+          <div *ngFor="let option of quickMindService.getCurrentQuestion().options; index as i" class="col-12 col-md-6">
             <div class="game-option disabled" [ngClass]="{ 'hidden': !quickMindService.hasStarted }">
               <span>{{ quickMindService.getOptionLetter(i) }}:</span>
               {{ option }}
@@ -22,6 +22,9 @@
         </div>
 
         <div *ngIf="quickMindService.isAnswerRevealed" class="row game-options">
+          <div class="col-12 mb-3">
+            El orden correcto es:
+          </div>
           <div *ngFor="let option of quickMindService.getCurrentQuestion().ordered" class="col-sm-12 col-md-6 offset-md-3">
             <div class="game-option disabled big">
               <span>{{ option.letter }}:</span>
