--- a/src/app/pages/menu/menu.component.html
+++ b/src/app/pages/menu/menu.component.html
@@ -10,26 +10,17 @@
           <fa-icon [icon]="faPlay" [fixedWidth]="true"></fa-icon> Empezar a jugar
         </button>
 
-        <button routerLink="/mente-rapida" class="btn btn-lg btn-outline-secondary btn-block" *ngIf="quickMindTotal > 0">
-          <fa-icon [icon]="faClock" [fixedWidth]="true"></fa-icon> Mente más rápida
+        <button routerLink="/mente-rapida" class="btn btn-lg btn-outline-light btn-block" *ngIf="quickMindTotal > 0">
+          <fa-icon [icon]="faClock" [fixedWidth]="true"></fa-icon> Mente-rápida
         </button>
 
         <p class="text-center mt-3">
           <small>
-            Hecho por Christiam Mena (v1.0.0) <br />
+            Creado por Christiam Mena (v1.0.0) <br />
             <a href="https://github.com/xtiam57/biblionaire" target="_blank">@xtiam57</a>
           </small>
         </p>
-
-        <!-- <p class="text-center mt-3">
-                                                                                                          <small>
-                                                                                                            <strong>Preguntas:</strong> <br />
-                                                                                                            {{summary}}
-                                                                                                          </small>
-                                                                                                        </p> -->
       </div>
     </div>
-
-
   </div>
 </div>
