--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,13 +1,13 @@
 <div class="btn-group">
-  <button routerLink="/" class="btn btn-link btn-lg text-light" title="Ir al menú principal">
+  <button routerLink="/" class="btn btn-link text-light" title="Ir al menú principal">
     <fa-icon [icon]="faHome"></fa-icon>
   </button>
 
-  <button (click)="toggleVolume()" class="btn btn-link btn-lg text-light" title="Activar/Desactivar el volumen">
+  <button (click)="toggleVolume()" class="btn btn-link text-light" title="Activar/Desactivar el volumen">
     <fa-icon [icon]="isMuted ? faVolumeMute : faVolumeUp"></fa-icon>
   </button>
 
-  <button (click)="fullScreen()" class="btn btn-link btn-lg text-light" title="Activar/Desactivar pantalla completa">
+  <button (click)="fullScreen()" class="btn btn-link text-light" title="Activar/Desactivar pantalla completa">
     <fa-icon [icon]="!isFullScreen ? faExpand : faCompress"></fa-icon>
   </button>
 </div>
