--- a/src/app/pages/quick-mind/quick-mind.component.scss
+++ b/src/app/pages/quick-mind/quick-mind.component.scss
@@ -6,7 +6,7 @@
   text-align: center;
 
   p {
-    font-size: 1.5rem;
+    font-size: calc(1.5rem + 0.03vmin);
     padding: 1.2rem;
     color: #343233;
     background-color: var(--primary);
