--- a/src/app/pages/game/game.component.html
+++ b/src/app/pages/game/game.component.html
@@ -61,9 +61,9 @@
 
           <div class="row game-options">
             <div *ngFor="let option of gameService.getCurrentQuestion().options; index as i" class="col-12 col-md-6">
-              <div class="option-wrapper">
+              <div class="option-wrapper" [ngClass]="{ 'blink': gameService.isBlinking(i) }">
                 <div class="game-option" (click)="gameService.selectOption(i)"
-                     [ngClass]="{ 'selected': gameService.isOptionSelected(i), 'disabled': gameService.isFinalAnswerSelected || gameService.hasQuit, 'blink': gameService.isBlinking(i), 'hidden': gameService.isHidden(i) }">
+                     [ngClass]="{ 'selected': gameService.isOptionSelected(i), 'disabled': gameService.isFinalAnswerSelected || gameService.hasQuit, 'hidden': gameService.isHidden(i) }">
                   <span>{{ gameService.getOptionLetter(i) }}:</span>
                   {{ option }}
                 </div>
